--- a/.github/workflows/issue_title_check.yaml
+++ b/.github/workflows/issue_title_check.yaml
@@ -67,7 +67,6 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const issueNumber = context.issue.number;
-            // Uygun format mesajı
             const comment = `
               Merhaba @${context.actor}, bu issue'nun başlığı belirlenen formata uymuyor.
               Lütfen başlığı "AD-SOYAD [ALAN][STAJ YERİ][STAJ TİPİ][STAJ SÜRESİ]" formatına uygun hale getirin.
@@ -76,14 +75,14 @@ jobs:
               Bu işlemi tamamladıktan sonra issue'yu başlığını güncellemen yeterli olacak.
             `;
             // Issue'ya yorum ekle
-            github.issues.createComment({
+            await octokit.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: issueNumber,
               body: comment
             });
             // Issue'yu kapat
-            github.issues.update({
+            await octokit.rest.issues.update({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: issueNumber,
@@ -125,7 +124,7 @@ jobs:
             const wasClosed = issueState === 'closed';
 
             if (wasClosed) {
-              await github.issues.update({
+              await octokit.rest.issues.update({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: issue_number,
@@ -134,7 +133,7 @@ jobs:
             }
 
             if (labelsToAdd.size > 0) {
-              await github.issues.addLabels({
+              await octokit.rest.issues.addLabels({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: issue_number,
@@ -142,7 +141,7 @@ jobs:
               });
             }
 
-            await github.issues.addAssignees({
+            await octokit.rest.issues.addAssignees({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: issue_number,
@@ -154,7 +153,7 @@ jobs:
               Lütfen staj bulduktan sonra buraya gelip kapatmayı unutma.
               Şimdiden bol şans ve sakın unutma staj ne başlangıç ne son çok çalışmak lazım.
             `;
-            await github.issues.createComment({
+            await octokit.rest.issues.createComment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: issue_number,
