--- a/.github/workflows/issue_title_check.yaml
+++ b/.github/workflows/issue_title_check.yaml
@@ -4,6 +4,10 @@ on:
   issues:
     types: [opened, edited]
 
+permissions:
+  issues: write
+  contents: read
+
 jobs:
   add-labels:
     runs-on: ubuntu-latest
