Enhance issue title validation workflow with detailed error reporting

--- a/.github/workflows/issue_title_check.yaml
+++ b/.github/workflows/issue_title_check.yaml
@@ -70,26 +70,56 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const issueNumber = context.issue.number;
+            const issueTitle = context.payload.issue.title;
+            const labels = ${{ steps.labels.outputs.result }};
+            const labelGroups = issueTitle.match(/\[([^\]]+)\]/g);
+            
+            let errorReason = '';
+            if (!labelGroups) {
+              errorReason = 'Başlıkta hiç köşeli parantez ([]) bulunamadı.';
+            } else if (labelGroups.length !== Object.keys(labels).length) {
+              errorReason = `Başlıkta ${Object.keys(labels).length} adet etiket grubu olmalı, fakat ${labelGroups.length} adet bulundu.`;
+            } else {
+              const invalidTags = [];
+              labelGroups.forEach((group, index) => {
+                const tags = group.match(/[^,\[\]]+/g).map(tag => tag.trim());
+                const field = Object.keys(labels)[index];
+                const validLabels = labels[field];
+                const invalidTagsInGroup = tags.filter(tag => !validLabels.includes(tag));
+                if (invalidTagsInGroup.length > 0) {
+                  invalidTags.push(`"${invalidTagsInGroup.join(', ')}" etiketleri "${field}" alanı için geçerli değil. Geçerli etiketler: ${validLabels.join(', ')}`);
+                }
+              });
+              if (invalidTags.length > 0) {
+                errorReason = 'Geçersiz etiketler bulundu:\n' + invalidTags.join('\n');
+              }
+            }
+
             const comment = `
               Merhaba @${context.actor}, bu issue'nun başlığı belirlenen formata uymuyor.
+
+              Hata Nedeni:
+              ${errorReason}
+
               Lütfen başlığı "AD-SOYAD [ALAN][STAJ YERİ][STAJ TİPİ][STAJ SÜRESİ]" formatına uygun hale getirin.
+              
               Örnekler için:
               https://github.com/VB10/staj_2024/issues/1
-              Bu işlemi tamamladıktan sonra issue'yu başlığını güncellemen yeterli olacak.
+              
+              Bu işlemi tamamladıktan sonra issue başlığını güncellemeniz yeterli olacak.
             `;
-            // Issue'ya yorum ekle
+            
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: issueNumber,
+              issue_number: context.issue.number,
               body: comment
             });
-            // Issue'yu kapat
+            
             await github.rest.issues.update({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: issueNumber,
+              issue_number: context.issue.number,
               state: 'closed'
             });
 
